Create API QuitGame and faire sa consommation
